# BlueWorkspaceBuild

./: .gitignore  CMakeLists.txt  Cargo.toml
ModelVis/: CMakeLists.txt
ModelVis/server/: CMakeLists.txt  ModelVisHandlers.hpp  ModelVisPlugin.cpp  ModelVisPlugin.h  rust_ffi.h
Scalar/: CMakeLists.txt
Scalar/front/: .env.development  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  updata-index.js  vite.config.ts
Scalar/front/src/: App.tsx  main.tsx  vite-env.d.ts
Scalar/front/src/api/: lossApi.ts  request.ts
Scalar/front/src/assets/: App.scss  index.scss
Scalar/front/src/components/Echarts/: index.tsx
Scalar/front/src/components/LossShow/: Chart.tsx  Smoothing.tsx  Upload.tsx  index.scss  index.tsx
Scalar/front/src/components/common/: Resizer.tsx
Scalar/front/src/context/: context.ts
Scalar/front/src/entity/: lossShow.ts
Scalar/front/src/eventBus/: index.ts
Scalar/front/src/i18n/: en.json  index.ts  zh.json
Scalar/front/src/i18n/lossShow/: en.json  index.ts  zh.json
Scalar/front/src/store/: index.ts  lossShow.ts  rootStore.ts
Scalar/front/src/utils/: common.ts  pollRequest.ts
Scalar/server/: .gitignore  CMakeLists.txt
Scalar/server/src/: CMakeLists.txt
Scalar/server/src/FileManager/: File.cpp  File.h  FileInfoManager.cpp  FileInfoManager.h  FileWatcher.h  FileWatcherFactory.h  FileWatcherLinuxImpl.cpp  FileWatcherLinuxImpl.h  VirtualFile.cpp  VirtualFile.h
Scalar/server/src/GraphLine/: GraphLine.cpp  GraphLine.h
Scalar/server/src/GraphLine/LineOp/: LineOp.h  LineOpFactory.h  NormalLineOp.h  SampleLineOp.h  SmoothingLineOp.h  TokenLineOp.h
Scalar/server/src/GraphLine/Smoother/: IRLowSmoother.cpp  IRLowSmoother.h  SmootherBase.h  SmootherFactory.h  WindowMedianSmoother.cpp  WindowMedianSmoother.h  WindowTopXSmoother.cpp  WindowTopXSmoother.h
Scalar/server/src/GraphManager/: GraphManager.cpp  GraphManager.h
Scalar/server/src/Util/: FileUtil.h  ScalaryProtocolUtil.h  ThreadPoolUtil.h
Scalar/server/src/defs/: ConceptDefs.h
Scalar/server/src/parser/: FileParser.cpp  FileParser.h  LogTextParser.cpp  LogTextParser.h  ParserFactory.h  SummaryParser.cpp  SummaryParser.h  TFEventParser.cpp  TFEventParser.h
Scalar/server/src/plugin/: ScalarVisualPlugin.cpp  ScalarVisualPlugin.h  ScalarVisuallyServer.cpp  ScalarVisuallyServer.h
Scalar/server/src/plugin/Handler/: ScalarVisuallyFileMergeHandler.cpp  ScalarVisuallyFileMergeHandler.h  ScalarVisuallyGetAllGraphHandler.cpp  ScalarVisuallyGetAllGraphHandler.h  ScalarVisuallyGetIncrementalTag.cpp  ScalarVisuallyGetIncrementalTag.h  ScalarVisuallyGetParseState.cpp  ScalarVisuallyGetParseState.h  ScalarVisuallyGetScalarDataHandler.cpp  ScalarVisuallyGetScalarDataHandler.h  ScalarVisuallyImportFileHandler.cpp  ScalarVisuallyImportFileHandler.h  ScalarVisuallyQueryCreatedFile.cpp  ScalarVisuallyQueryCreatedFile.h  ScalarVisuallyTokenSet.cpp  ScalarVisuallyTokenSet.h
Scalar/server/src/test/: FileInfoManagerTest.cpp  GraphTest.cpp  ParserTest.cpp  PluginTest.cpp
Scalar/server/src/test/test_data/tfevent_data/: events.out.tfevents.1728628561
output/lib/: libmsinsight.dylib
output/plugins/ModelVis/: libModelVis.dylib  librustffi.dylib
plugin_core/: CMakeLists.txt
plugin_core/cmake/: mind_expression.cmake  options.cmake  utils.cmake
plugin_core/cmake/external_libs/: gtest.cmake  json.cmake  libuv.cmake  protobuf.cmake  uSockets.cmake  uWebSockets.cmake
plugin_core/include/: ApiHandler.h  BaseModule.h  BasePlugin.h  Logger.h  ModuleRequestHeadler.h  PluginsManager.h  ProtocolUtil.h  WsSender.h
plugin_core/src/: Logger.cpp  PluginsManager.cpp
proto/: CMakeLists.txt  event.pb.cc  event.pb.h  histogram.pb.cc  histogram.pb.h  mindspore_anf_ir.pb.cc  mindspore_anf_ir.pb.h  mindspore_anf_ir.proto  mindspore_summary.pb.cc  mindspore_summary.pb.h  mindspore_summary.proto  resource_handle.pb.cc  resource_handle.pb.h  resource_handle.proto  summary.pb.cc  summary.pb.h  summary.proto  tensor.pb.cc  tensor.pb.h  tensor.proto  tensor_shape.pb.cc  tensor_shape.pb.h  tensor_shape.proto  types.pb.cc  types.pb.h  types.proto
rust/ffi/: Cargo.toml
rust/ffi/src/: geometry.rs  lib.rs  parse_layout.rs
rust/layout/: Cargo.toml
rust/layout/src/: acyclic.rs  coordinate_system.rs  lib.rs  nesting_graph.rs  normalize.rs  parent_dummy_chains.rs  selfedge.rs  utils.rs
rust/layout/src/algo/: mod.rs
rust/layout/src/graph/: config.rs  key.rs  mod.rs  node_edge.rs
rust/layout/src/order/: build_layer_graph.rs  cross_count.rs  init_order.rs  mod.rs
rust/layout/src/order/subgraph/: add_constraints.rs  barycenters.rs  context.rs  mod.rs  resolve_conflict.rs  sort.rs
rust/layout/src/position/: align.rs  block_graph.rs  conflict.rs  context.rs  mod.rs  xy.rs
rust/layout/src/rank/: feasible_tree.rs  longest_path.rs  mod.rs  network_simplex.rs  slack.rs
rust/parser/: Cargo.toml  build.rs
rust/parser/proto/: geir.proto  mindir.proto  onnx.proto
rust/parser/src/: lib.rs  model.rs  str_ext.rs  string_ext.rs
rust/parser/src/processors/: geir.rs  mindir.rs  mod.rs  onnx.rs
rust/parser/tests/: test_strip_prefix.rs
rust/subgraph/: .gitignore  Cargo.toml  README.md
rust/subgraph/src/: lib.rs  main.rs
rust/subgraph/src/gspan/: gspan.rs  misc.rs  mod.rs  result.rs
rust/subgraph/src/gspan/models/: dfs.rs  dfs_code.rs  edge.rs  graph.rs  history.rs  mod.rs  prev_dfs.rs  projected.rs  vertex.rs
rust/subgraph/src/io/: mod.rs  model_graph.rs  node.rs  output.rs
rust/subgraph/src/strategy/: config.rs  gspan_mining.rs  mining_strategy.rs  mod.rs
tools/httpServer/: CMakeLists.txt  HttpServer.cpp  HttpServer.h  main.cpp
