cmake_minimum_required(VERSION 3.20)
project(MindStudio_Board)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_C_STANDARD 11)
set(PROJECT_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
include(${CMAKE_CURRENT_SOURCE_DIR}/plugin_core/cmake/mind_expression.cmake)
add_subdirectory(proto)
add_compile_definitions(PLUGINS_DIR="${PROJECT_ROOT_DIR}/output/plugins")
#if (${CMAKE_BUILD_TYPE} MATCHES "Debug")
#    message(STATUS "Open tools generate")
    add_subdirectory(tools/httpServer)
#endif ()
add_subdirectory(plugin_core)
add_subdirectory(Scalar)
add_subdirectory(ModelVis)
