[package]
name = "ffi"
version = "0.1.0"
edition = "2024"

[lib]
name = "librustffi"
crate-type = ["cdylib"]

[dependencies]
ahash.workspace = true
smartstring.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.139"
parser = { path = "../parser" }
layout = { path = "../layout" }
subgraph = { path = "../subgraph" }
